[package]
name = "split_samsung_motion_jpg"
version = "1.0.30"
description = "Split 'Samsung 3 seconds motion jpg' into still photo and video (2025-02)"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/split_samsung_motion_jpg"
# https://crates.io/category_slugs
categories = ["command-line-utilities"]
keywords = ["work-in-progress", "maintained", "samsung", "motion", "jpg"]
publish = false

[dependencies]
log = "0.4"
thiserror = "1.0.30"
anyhow="1.0.56"
glob = "0.3.2"
unwrap="1.2.1"
log2 = "0.1.14"